@@ -4,10 +4,12 @@ DIST nvidia-settings-180.60.tar.gz 1342058 RMD160 28b88b149eae31ab2da897d2ade8bb
 DIST nvidia-settings-185.18.04.tar.gz 1347205 RMD160 f882ce07a1022fc354031ff3a0f67c05c9ae4f2b SHA1 9fd3cc81219b1adda86ce0a5bb1965f2d4352189 SHA256 15865e6630ca48b049f04a01bf7e00565dc0e85979d87500f056b942d2ddb44f
 DIST nvidia-settings-185.18.08.tar.gz 1347259 RMD160 bf45ba984d767a2ec2a156a63858f6c02346ae1f SHA1 5891ec8753154d419d9ff1e84c2acb8f20c3b8af SHA256 b043c00d9703bfccfe7f21241ab99701bba85aa2c37d190dba2c9ec84d38dba4
 DIST nvidia-settings-185.18.10.tar.gz 1348223 RMD160 b4d17ee8720a7c0495e77f20d35536aba9833bca SHA1 710f63441012e9e894c3dbbfe9309fba5e6f99c1 SHA256 94dcbedc569f49f2384f91ac94010bc6c13f50fe1008704f49811b76fdc851e6
+DIST nvidia-settings-185.18.14.tar.gz 1350027 RMD160 441f0ee5b66041ddf9c71394fc2d2f3c793449c3 SHA1 61a97feef307837a642d34fc748e726664a1ad6b SHA256 c013fab6106f8addd40f0295354c001c4666c29ea65a4c8a7457331a215fce78
 DIST nvidia-settings-185.19.tar.gz 1347210 RMD160 4d2bc94fb73574f607685f7c8a3b1f06e6cafd75 SHA1 9e29bf0319bf9ea65d9c054e15521a5510b1a5c0 SHA256 5e0cb24c1a53f679bad923b5be9145fc7425af16032072f181b9034da91b499a
 EBUILD nvidia-settings-180.60.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
 EBUILD nvidia-settings-185.18.04.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
 EBUILD nvidia-settings-185.18.08.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
 EBUILD nvidia-settings-185.18.10.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
+EBUILD nvidia-settings-185.18.14.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
 EBUILD nvidia-settings-185.19.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
-MISC ChangeLog 885 RMD160 c81200c4c9865eab3cb1ffac296c3fd311688b5b SHA1 2bfcebd2e0fed91c1aa7cf7887ec1dee68d0cf0c SHA256 24dc1d730d0bd75729768c91fe125caf54d50ea870e8fe7288994e72c8a17a9b
+MISC ChangeLog 1049 RMD160 defa071431a3dea1183e343c0ec64fa59d3151eb SHA1 68dc0c3c51059ffdf609e032ca689f579a90be58 SHA256 3ebf28b0046739fd84e15f776a019291c57f75a3a248bd9e96ceaeee538e8f14
