@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nvidia-settings-185.18.14 (30 May 2009)
+
+  30 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
+  +nvidia-settings-185.18.14.ebuild:
+  new beta version
+
 *nvidia-settings-180.60 (19 May 2009)
 
   19 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
